# explorer_core

./: .gitignore  CMakeLists.txt
Informe/: library.bib  main.tex  template.tex  template_config.tex
Informe/paginas/: 0. Resumen.tex  1. introduccion.tex  2. trabajo_teorico.tex  3. modelacion.tex  4. simulacion.tex  5. conclusiones.tex  6. bibliografia.tex
explorer_core/: CMakeLists.txt  package.xml
explorer_core/launch/: robot.launch.py  rsp.launch.py
explorer_core/rviz/: bot.rviz
explorer_joy/: CMakeLists.txt  package.xml
explorer_joy/launch/: joystick.launch.py
explorer_joy/params/: joystick.yaml
launch/: robot.launch.py
scripts/: example_controller.py  goal_pose.py  odometry_plotter.py  tf2.py  variables.json  vel_controller.py
src/amcl_launch/config/: amcl.yaml
src/amcl_launch/launch/: amcl.launch.py  teleop.launch.py  teleop_keyboard.launch.py
src/ekf_localization/: CMakeLists.txt
src/ekf_localization/scripts/: ekf_localization.py  nav_test.py
src/el7009_diff_drive_robot/launch/: robot.launch.py
src/el7009_diff_drive_robot/scripts/: inv_kinematics.py
src/nav_planning/: exps.py  pure_pursuit_planner.py  rrt_planner.py
src/simple_manipulator/launch/: simple_manipulator.launch.py
src/simple_manipulator/scripts/: fk_solution.py  forward_kinematics.py  inverse_kinematics.py
tarea_3/amcl_launch/config/: amcl.yaml
tarea_3/amcl_launch/launch/: amcl.launch.py
tarea_3/amcl_launch/map/: map_ekf.txt
tarea_3/ekf_localization/: CMakeLists.txt
tarea_3/ekf_localization/scripts/: ekf_localization.py
(+4 files in other folders)
