
<?xml version="1.0"?>
<package format="3">
  <name>explorer_core</name>
  <version>0.0.0</version>
  <description>
    Paquete central del robot explorer: launch, urdf, mundos de simulación,
    configuración y scripts auxiliares.
  </description>

  <maintainer email="tu_email@ejemplo.com">Felipe González</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <!-- No dependencias explícitas declaradas en CMakeLists -->
  <!-- Si example_controller.py usa rclpy, debería agregarse -->
  <!--
  <exec_depend>rclpy</exec_depend>
  -->

  <!-- Lint / testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
