
<?xml version="1.0"?>
<package format="3">
  <name>explorer_joy</name>
  <version>0.0.0</version>
  <description>
    Paquete explorer_joy
  </description>

  <maintainer email="tu_email@ejemplo.com">Felipe González</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>sensor_msgs</depend>

  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
